# rapid-demo

./: Cargo.toml  bindings.ts  rapid.Dockerfile  rapid.toml
remix/: pnpm-lock.yaml
remix/app/: root.tsx
remix/app/routes/: _index.tsx
src/: main.rs
src/routes/: index.rs  mod.rs  todo.rs
src/routes/_param_/: _id_.rs  _middleware.rs  index.rs  mod.rs  todo.rs
src/routes/_param_/nest/: dir.rs  index.rs  mod.rs
src/routes/test/: _middleware.rs  index.rs  mod.rs
src/routes/test/test2/: _id_.rs  index.rs  mod.rs
