[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
clerk-rs = { version = "0.1.4", path = "/Users/JRDarrenbaldwin/Documents/Coding/CincinnatVentures/clerk-rs" }
futures-core = "0.3.28"
futures-util = "0.3.27"
include_dir = "0.7.3"
jsonwebtoken = "8.3.0"
pin-project-lite = "0.2.9"
rapid-web = { version = "0.3.9", path = "/Users/JRDarrenbaldwin/Documents/Coding/CincinnatVentures/RapidFramework/rapid/crates/rapid-web" }
rapid-web-codegen = { version = "0.2.2", path = "/Users/JRDarrenbaldwin/Documents/Coding/CincinnatVentures/RapidFramework/rapid/crates/rapid-web-codegen" }
reqwest = "0.11.16"
serde = "1.0.159"
serde_json = "1.0.96"
syn = "2.0.13"
walkdir = "2.3.3"
